feat: add PATCH /users/:id endpoint for updating user data via Swagger
