# docs/swagger.json
@@ -163,6 +163,7 @@
                 }
             },
             "patch": {
+                "description": "Update existing user's information",
                 "consumes": [
                     "application/json"
                 ],
@@ -172,6 +173,7 @@
                 "tags": [
                     "users"
                 ],
+                "summary": "Update user data",
                 "parameters": [
                     {
                         "type": "integer",
@@ -179,13 +181,28 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "User update data",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateUserRequest"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "string",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.UpdateUserRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
                         }
                     }
                 }
@@ -194,6 +211,23 @@
     },
     "definitions": {
         "models.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "yusuf@gmail.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "log123"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "yusuf_bahtr"
+                }
+            }
+        },
+        "models.UpdateUserRequest": {
             "type": "object",
             "properties": {
                 "email": {
